<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp"
    style="@style/CustomDialog1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_pertanyaan_konfirmasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pertanyaan"
        android:gravity="center"
        style="@style/SmallHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_pertanyaan_konfirmasi_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/deskripsi_pertanyaan"
        android:textSize="15sp"
        style="@style/Description"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_pertanyaan_konfirmasi" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ya"
        style="@style/ButtonBlueStyle"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/ya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_pertanyaan_konfirmasi_deskripsi" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_tidak"
        style="@style/ButtonWhiteStyle"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/tidak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_ya" />
</androidx.constraintlayout.widget.ConstraintLayout>